tenzir/integration/data/reference/python/test_empty_output_throws/step_00.ref
error: Traceback (most recent call last):
    batch_out = execute_user_code(batch_in, compiled_code)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    raise RuntimeError(msg)
RuntimeError: Empty output not allowed
 = note: python process exited with error